# propositional-planning

./: LICENSE  README.md  Satplan.hs  TODO  propositional-planning.cabal  satplan.cabal  stack.yaml
AI/: Planning.hs
AI/Planning/: SatPlan.hs  Satplan.hs
tests/: Bench.hs  Problems.hs  Test-main.hs  Test-problems.hs  Test-satplan.hs
