Name:                propositional-planning
Version:             0.1
Synopsis:            A planning library for classic propositional logic planning problems.
Description:         A planning library to solve planning problems. The
                     classic "planning as satisfiability" algorithm is
                     implemented.
License:             BSD3
License-file:        LICENSE
Author:              Ismo Puustinen
Maintainer:          ismo@iki.fi
Copyright: Copyright (C) 2012 Ismo Puustinen
Category:            AI
-- Extra-source-files:
Cabal-version:       >=1.2

Library
  Exposed-modules: AI.Planning, AI.Planning.SatPlan
  Build-depends:      base, regex-compat, containers, hatt, incremental-sat-solver
  -- Other-modules:
  -- Build-tools:

Source-Repository head
  type:     git
  location: git://github.com/ipuustin/propositional-planning.git

