Name:                propositional-planning
Version:             0.1
Synopsis:            A planning library for classic propositional logic planning problems.
Description:         A planning library to solve planning problems. The
                     classic "planning as satisfiability" algorithm is
                     implemented.
License:             BSD3
License-file:        LICENSE
Author:              Ismo Puustinen
Maintainer:          ismo@iki.fi
Copyright: Copyright (C) 2012 Ismo Puustinen
Category:            AI
Extra-source-files:  README.md
Cabal-version:       >=1.2
Build-type:          Simple

Library
  Exposed-modules: AI.Planning, AI.Planning.SatPlan
  Build-depends:      base, regex-compat, containers, incremental-sat-solver
  -- Other-modules:
  -- Build-tools:

benchmark planning-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   ., tests
  other-modules:    AI.Planning, AI.Planning.SatPlan
  main-is:          Test-problems.hs
  build-depends:    base,
                    criterion,
                    QuickCheck,
                    random
  ghc-options:      -Wall
                    -O2

Source-Repository head
  type:     git
  location: git://github.com/ipuustin/propositional-planning.git

